# blackkeyx-backend

./: .env.example  .gitignore  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_name_to_investor_profiles.py
app/: config.py  dependencies.py  main.py
app/db/: __init__.py  session.py
app/db/repositories/: __init__.py  base.py  investor_repo.py  property_repo.py
app/models/: __init__.py  base.py  consent.py  investor.py  matching.py  property.py  voice.py
app/routers/: __init__.py  admin.py  leads.py  properties.py
app/schemas/: __init__.py  admin.py  investor.py  lead.py  property.py
app/services/: __init__.py  extraction_service.py  lead_processor.py
